--- a/style.css
+++ b/style.css
@@ -9,6 +9,35 @@ html {
   background-color: #E2CECD;
 }
 
+.container {
+  position: relative;
+}
+
+.enter {
+  height: 125px;
+  width: 275px;
+  border-style: solid;
+  background-color: #604831;
+  margin-top: 50px;
+  position: absolute;
+  text-align: center;
+}
+
+.center {
+  text-align: center;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  padding-bottom: 14px;
+}
+
+nav h2 {
+  font-family: 'Aboreto', cursive;
+  color: #E2CECD;
+  font-size: 28px;
+}
+
 section {
   height: 416px;
   margin-left: 16px;
@@ -21,13 +50,13 @@ section {
   border-style: solid;
 }
 
-div h1{
+header h1{
   font-family: 'Aboreto', cursive;
   font-size: 90px;
   color: black;
 }
 
-div h2{
+header h2{
   font-family: 'Aboreto', cursive;
   color: black;
 }
