--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ html {
   position: relative;
 }
 
+nav :hover {
+  background-color: gray;
+  color: black;
+}
+
 .enter {
   height: 125px;
   width: 275px;
@@ -21,6 +26,17 @@ html {
   margin-top: 50px;
   position: absolute;
   text-align: center;
+}
+
+.infobtn {
+  height: 50px;
+  width: 255px;
+  border-style: solid;
+  background-color: #604831;
+  margin-top: 190px;
+  position: absolute;
+  text-align: center;
+  margin-left: 20px;
 }
 
 .center {
@@ -47,18 +63,17 @@ section {
 .box {
   background-color: #AB977F;
   height: 400px;
-  border-style: solid;
 }
 
 header h1{
   font-family: 'Aboreto', cursive;
   font-size: 90px;
-  color: black;
+  color:#4a3521;
 }
 
 header h2{
   font-family: 'Aboreto', cursive;
-  color: black;
+  color: #4a3521;
 }
 
 .piano_img {
@@ -67,7 +82,7 @@ header h2{
   margin-right: auto;
   width: 50%;
   scale: 150%;
-  border-style: solid;
+  margin-top: 75px;
 }
 
 .guitar_img {
@@ -77,7 +92,7 @@ header h2{
   width: 50%;
   scale: 200%;
   transform: rotate(-45deg);
-  border-style: solid;
+  margin-top: 132px;
 }
 
 .drums_img {
@@ -86,5 +101,5 @@ header h2{
   margin-right: auto;
   width: 50%;
   scale: 150%;
-  border-style: solid;
+  margin-top: 75px;
 }
