--- a/style.css
+++ b/style.css
@@ -6,23 +6,19 @@ html {
 
 .header {
   height: 450px;
-  background-color: #E2CECD;
+  /*background-color: #E2CECD;*/
 }
 
 .container {
   position: relative;
 }
 
-/*nav :hover {
-  background-color: gray;
-  color: black;
-}*/
 
 .enter {
   height: 125px;
   width: 275px;
   border-style: solid;
-  background-color: #604831;
+  /*background-color: #604831;*/
   margin-top: 50px;
   position: absolute;
   text-align: center;
@@ -32,7 +28,7 @@ html {
   height: 50px;
   width: 255px;
   border-style: solid;
-  background-color: #604831;
+  /*background-color: #604831;*/
   margin-top: 190px;
   position: absolute;
   text-align: center;
@@ -45,12 +41,11 @@ html {
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-  /*padding-bottom: 14px;*/
 }
 
 nav h2 {
   font-family: 'Aboreto', cursive;
-  color: #E2CECD;
+  /*color: #E2CECD;*/
   font-size: 28px;
   padding-bottom: 14px;
 }
@@ -69,12 +64,12 @@ section {
 header h1{
   font-family: 'Aboreto', cursive;
   font-size: 90px;
-  color:#4a3521;
+  /*color:#4a3521;*/
 }
 
 header h2{
   font-family: 'Aboreto', cursive;
-  color: #4a3521;
+  /*color: #4a3521;*/
 }
 
 .piano_img {
@@ -119,7 +114,7 @@ header h2{
   width: 55%;
 }
 
-footer {
+/*footer {
   background-color:  #E2CECD;
   color: #4a3521;
-}
+}*/
